# cabin_auv_simulation

./: LICENSE  README.md
bluerov2h/bluerov2h_description/: CMakeLists.txt  package.xml
bluerov2h/bluerov2h_description/meshes/: Propeller.dae
bluerov2h/bluerov2h_gazebo/: CMakeLists.txt  package.xml
bluerov2h/bluerov2h_gazebo/launch/: bluerov2h_origin.launch
bluerov2h/bluerov2h_gazebo/urdf/: bluerov2h_origin_gazebo.xacro  readball.xacro
bluerov2h/bluerov2h_gazebo/urdf/sensors/: bluerov2h_camera_snippets.xacro  bluerov2h_imu_snippets.xacro  bluerov2h_stereo_camera_snippets.xacro
bluerov2h/cabin_auv_ws/cabin_behaviors/include/cabin_behaviors/: pid_tracking.h
bluerov2h/cabin_auv_ws/cabin_behaviors/launch/: pid_tracking.launch
bluerov2h/cabin_auv_ws/cabin_behaviors/src/: pid_tracking.cpp
bluerov2h/cabin_auv_ws/cabin_controllers/: CMakeLists.txt  package.xml
bluerov2h/cabin_auv_ws/cabin_controllers/include/cabin_controllers/: thruster_controller_gazebo_sim.h
bluerov2h/cabin_auv_ws/cabin_controllers/launch/: gazebo_sim.launch  thruster_controller_gazebo_sim.launch
bluerov2h/cabin_auv_ws/cabin_controllers/src/: thruster_controller_gazebo_sim.cpp
bluerov2h/cabin_auv_ws/cabin_teleop/include/cabin_teleop/: logicool_button_mapping.h
bluerov2h/cabin_auv_ws/cabin_teleop/src/: logicool_controller.cpp
bluerov2h/cabin_auv_ws/cabin_vision/launch/: object_deviation.launch
