<?xml version="1.0"?>
<package format="2">
  <name>bluerov2h_description</name>
  <version>0.0.1</version>
  <description>The bluerov2h_description package</description>

  <maintainer email="xiekb@pcl.ac.cn">cabin</maintainer>

  <license>BSD</license>

  <author email="xiekb@pcl.ac.cn">cabin</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
