<?xml version="1.0"?>
<package format="2">
  <name>bluerov2h_gazebo</name>
  <version>0.0.1</version>
  <description>The bluerov2h_gazebo package</description>

  <maintainer email="xiekb@pcl.ac.cn">cabin</maintainer>

  <license>BSD</license>

  <author email="xiekb@pcl.ac.cn">cabin</author>

  <buildtool_depend>catkin</buildtool_depend>
  <!--
  <exec_depend>bluerov2h_description</exec_depend>
  <depend>uuv_assistants</depend>
  <depend>uuv_descriptions</depend>
  <depend>uuv_gazebo_plugins</depend>
  <depend>uuv_gazebo_ros_plugins</depend>
  <depend>uuv_sensor_ros_plugins</depend>
  -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
